--- a/src/routes/Witness/Witness.css
+++ b/src/routes/Witness/Witness.css
@@ -1,17 +1,24 @@
 .witness {
-  width: 1100px;
+  width: 1000px;
   margin: auto;
 }
 .witness-header {
   text-align: center;
   margin-bottom: 20px;
 }
+.witness-header-form{
+    width: auto;
+}
+.witness-header-subtitle{
+    text-align: left;
+}
 .witness-header-searchbar {
   height: 30px;
-  width: 400px;
+  width: 100px;
 }
 .witness-header-button {
   width: 2%;
+
 }
 .witness-header-write {
   text-align: right;
@@ -25,6 +32,16 @@
   padding: 10px;
 }
 .witness-container-img {
+  width: 300px;
+  height: 400px;
+}
+.witness-modal{
+  font-family: sans-serif;
+  text-align: center;
   width: 100%;
   height: auto;
+}
+.witness-modal-img{
+    width: 100%;
+    height: auto;
 }
