delete not using func

--- a/src/routes/Post/Post.css
+++ b/src/routes/Post/Post.css
@@ -62,10 +62,10 @@
   margin-left: 20px;
   margin-top: 10px;
 }
-.writter {
+.writer {
   margin: 20px;
 }
-.writter div {
+.writer div {
   margin-bottom: 10px;
 }
 .title {
