--- a/src/routes/Find/Find.css
+++ b/src/routes/Find/Find.css
@@ -27,7 +27,7 @@
 
 .article_title {
   height: auto;
-  font-family: "Cute Font", cursive;
+  font-family: 'Cute Font', cursive;
   font-size: 1.7em;
   margin-bottom: 15px;
   font-weight: bold;
@@ -47,13 +47,13 @@
   margin: 60px;
 }
 
-button{
+button {
   margin: 3px;
   padding: 5px 7px;
   font-size: 0.7em;
 }
 
-button:focus{
+button:focus {
   outline: none;
 }
 
@@ -61,7 +61,6 @@ button:focus{
   color: white;
   background: #6565ff;
 }
-
 
 .unclickedButton {
   color: black;
