--- a/src/routes/Witness/Witness.css
+++ b/src/routes/Witness/Witness.css
@@ -1,31 +1,58 @@
 .container {
-
+  
 }
 .witness {
-    width: 1000px;
-    margin: auto;
+  width: 1100px;
+  margin: auto;
 }
 .witness-header {
+
 }
 .witness-header-form {
+  
 }
 .witness-header-subtitle {
+
 }
 .witness-header-searchbar {
+
 }
 .witness-header-button {
-  width: 20px;
+  width: 4em;
 }
 .witness-header-write {
+
+}
+.witness-container{
+  
+}
+.witness-container-outline{
+  text-align: center;
 }
 .witness-container-list {
   display: inline-table;
   width: 300px;
   height: 500px;
 }
+.witness-container-title{
+  height: auto;
+  font-family: "Cute Font", cursive;
+  font-size: 1.7em;
+  margin-bottom: 15px;
+  font-weight: bold;
+}
 .witness-container-img {
-  width: 200px;
+  width: 300px;
   height: 300px;
+  margin: 20px 30px 20px 0;
+  background-position: center;
+  background-size: 100%;
+  padding: 9px;
+  background: #fff;
+  border: 1px solid #e5e5e5;
+  box-shadow: 5px 5px 3px #f5f5f5;
+  border-radius: 15px;
+  float: left;
 }
 .witness-container-content {
   width: 200;
@@ -40,11 +67,19 @@
 }
 ul.pagination {
   background-color: white;
-  list-style: none;
+  list-style: none; 
+  text-align: center;
+  margin: 60px;
 }
 
 ul.pagination li {
   display: inline-block;
-  border: 1px solid;
-  margin: 10px;
+  /* border: 1px solid; */
+  /* margin: 10px; */
+  margin: 3px;
+  padding: 5px 7px;
+  font-size: 0.7em;
+}
+button:focus{
+  outline: none;
 }
