--- a/src/routes/Post/Post.css
+++ b/src/routes/Post/Post.css
@@ -2,18 +2,26 @@
   width: 1000px;
   margin: auto;
   margin-bottom: 50px;
-  border: 1px solid black;
+  border: 1px solid #e5e5e5;
+  box-shadow: -2px -2px 1px 1px #f5f5f5;
+  border-radius: 15px;
 }
 .postPictureBody {
-  margin: 40px 300px;
-  height: 20em;
-  width: 20em;
-  border: 1px solid black;
+  margin-top: 40px;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 25em;
+  width: 25em;
+  border: 5px solid #e5e5e5;
+  box-shadow: -2px -2px 1px 1px #f5f5f5;
+  border-radius: 15px;
 }
 .uploadImg {
   height: 100%;
   width: 100%;
-  object-fit: contain;
+  object-fit: cover;
+  border-radius: 10px;
 }
 .photoInput {
   text-align: center;
@@ -23,12 +31,24 @@
 }
 .classificationButton div {
   margin: 10px;
+  line-height: 20px;
+  font-family: "Sunflower", sans-serif;
+  font-size: 1.3em;
+  font-weight: 600;
 }
 .missngPlace {
   margin: 10px;
+  line-height: 20px;
+  font-family: "Sunflower", sans-serif;
+  font-size: 1.3em;
+  font-weight: 600;
 }
 .iFound {
   margin: 10px;
+  line-height: 20px;
+  font-family: "Sunflower", sans-serif;
+  font-size: 1.3em;
+  font-weight: 600;
 }
 .location {
   margin: 10px;
@@ -42,6 +62,12 @@
 .sex,
 .reward {
   margin-left: 10px;
+}
+.sex span {
+  line-height: 20px;
+  font-family: "Sunflower", sans-serif;
+  font-size: 1.3em;
+  font-weight: 600;
 }
 .reward input {
   margin-left: 10px;
@@ -63,25 +89,46 @@
 }
 #classificationSelect {
   margin-left: 10px;
+  height: 35px;
+  width: auto;
+  font-size: 20px;
 }
 .speciesSelect {
   margin: 10px;
 }
+.species span {
+  line-height: 20px;
+  font-family: "Sunflower", sans-serif;
+  font-size: 1.3em;
+  font-weight: 600;
+}
 .no {
   margin-left: 20px;
   margin-top: 10px;
+  line-height: 20px;
+  font-family: "Sunflower", sans-serif;
+  font-size: 1.3em;
+  font-weight: 600;
 }
 .writer {
   margin: 20px;
 }
 .writer div {
   margin-bottom: 10px;
+  line-height: 20px;
+  font-family: "Sunflower", sans-serif;
+  font-size: 1.3em;
+  font-weight: 600;
 }
 .title {
   margin: 20px;
 }
 .title div {
   margin-bottom: 10px;
+  line-height: 20px;
+  font-family: "Sunflower", sans-serif;
+  font-size: 1.3em;
+  font-weight: 600;
 }
 .submitButton {
   text-align: center;
