--- a/src/routes/Post/Post.css
+++ b/src/routes/Post/Post.css
@@ -23,9 +23,6 @@
   object-fit: cover;
   border-radius: 10px;
 }
-.photoInput {
-  text-align: center;
-}
 .classificationButton {
   margin: 10px;
 }
@@ -74,27 +71,47 @@
 }
 .sexSelect {
   margin: 10px;
+  width: auto;
+  height: auto;
+  font-size: 20px;
 }
 .explanation {
   margin-left: 20px;
   margin-bottom: 20px;
 }
+.explanation input {
+  width: auto;
+  height: auto;
+  font-size: 20px;
+}
+.writer input {
+  width: auto;
+  font-size: 20px;
+  text-align: center;
+}
 #citySelect {
-  display: inline;
   margin-left: 10px;
+  width: auto;
+  height: auto;
+  font-size: 20px;
 }
 #districtSelect {
-  display: inline;
   margin-left: 10px;
+  width: auto;
+  height: auto;
+  font-size: 20px;
 }
 #classificationSelect {
   margin-left: 10px;
-  height: 35px;
+  height: auto;
   width: auto;
   font-size: 20px;
 }
 .speciesSelect {
   margin: 10px;
+  width: auto;
+  height: auto;
+  font-size: 20px;
 }
 .species span {
   line-height: 20px;
@@ -130,7 +147,43 @@
   font-size: 1.3em;
   font-weight: 600;
 }
+.title input {
+  width: auto;
+  text-align: left;
+  font-size: 20px;
+  height: auto;
+}
 .submitButton {
   text-align: center;
   margin-bottom: 20px;
+}
+.submitButton button {
+  margin: 3px;
+  padding: 6px 12px;
+  font-size: 1.4em;
+}
+.exactLocation input {
+  width: auto;
+  height: auto;
+  font-size: 20px;
+}
+.photoInput {
+  width: auto;
+  height: auto;
+  font-size: 20px;
+}
+.photoInput input {
+  font-size: 20px;
+  margin-left: 30%;
+  widows: auto;
+  height: auto;
+}
+.photoInput button {
+  font-size: 10px;
+  margin-left: 30%;
+  width: auto;
+  height: auto;
+}
+input[type="file"] {
+  color: transparent;
 }
