--- a/src/routes/Witness/Witness.css
+++ b/src/routes/Witness/Witness.css
@@ -1,15 +1,17 @@
-
 .witness {
-    width: 1000px;
-    margin: auto;
+  width: 1100px;
+  margin: auto;
+}
+.component_body {
+  width: 1000px;
+  margin: auto;
 }
 
-.witness-header-button {
-  width: 20px;
+.witness_section2_posts {
+  overflow: hidden;
 }
 
-.witness-container-list {
-  display: inline-table;
+.witness_section2_post {
   width: 300px;
   height: 300px;
   margin: 20px 30px 20px 0;
@@ -35,12 +37,20 @@
   width: 283px;
   float: left;
   margin-right: 50px;
-  text-align: center; 
+  text-align: center;
 }
 
-.witness-modal-img {
-  width: 200px;
-  height: 300px;
+/* ------------------------------ page move button ------------------------------------------- */
+
+.buttonForm {
+  text-align: center;
+  margin: 60px;
+}
+
+button {
+  margin: 3px;
+  padding: 5px 7px;
+  font-size: 0.7em;
 }
 
 button:focus {
@@ -60,7 +70,7 @@ button:focus {
 .modal {
   position: absolute;
   background: #fff;
-  top: 15%;
+  /* top: 15%; */
   left: 11%;
   right: 11%;
   padding: 15px;
@@ -69,8 +79,33 @@ button:focus {
   margin-top: 10em;
 }
 
-.asd {
+.modalBack {
+  position: absolute;
+  top: 0;
+  height: 3030px;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.modalClose {
   float: right;
   padding: 4px;
   font-size: 1em;
 }
+
+
+.searchForm {
+  margin: 50px 0px;
+  padding: 10px;
+  text-align: right;
+  border: 1px solid #e5e5e5;
+  box-shadow: 5px 5px 3px #f5f5f5;
+  border-radius: 25px;
+}
+
+/* border: 1px solid #e5e5e5;
+    box-shadow: 5px 5px 3px #f5f5f5;
+    border-radius: 15px;
+    font-size: 0.8em; */
