--- a/src/routes/Witness/Witness.css
+++ b/src/routes/Witness/Witness.css
@@ -26,8 +26,8 @@
 }
 
 .article_title {
-  height: auto;
-  font-family: 'Cute Font', cursive;
+  /* height: 325px; */
+  font-family: "Cute Font", cursive;
   font-size: 1.7em;
   margin-bottom: 15px;
   font-weight: bold;
@@ -94,18 +94,3 @@ button:focus {
   padding: 4px;
   font-size: 1em;
 }
-
-
-.searchForm {
-  margin: 50px 0px;
-  padding: 10px;
-  text-align: right;
-  border: 1px solid #e5e5e5;
-  box-shadow: 5px 5px 3px #f5f5f5;
-  border-radius: 25px;
-}
-
-/* border: 1px solid #e5e5e5;
-    box-shadow: 5px 5px 3px #f5f5f5;
-    border-radius: 15px;
-    font-size: 0.8em; */
