--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
   margin: 30px 30px 50px;
   height: 80px;
   background: url("./logo.png") no-repeat;
-  background-size: 60px;
+  background-size: 72px;
   font-size: 41px;
   color: black;
   font-family: 'Gugi', cursive;
@@ -10,7 +10,7 @@
 
 .title_mm {
   font-size: 53px;
-  color: black;
+  color: orange;
 }
 
 .title_req {
