--- a/src/routes/Post/Post.css
+++ b/src/routes/Post/Post.css
@@ -211,12 +211,18 @@
   box-shadow: -2px -2px 1px 1px #f5f5f5;
   border-radius: 15px;
 }
+.photoUpload button:hover {
+  color: red;
+}
 .photoUpload input[type="file"] {
   width: 14em;
   font-size: 16px;
   border: 3px solid #e5e5e5;
   box-shadow: -2px -2px 1px 1px #f5f5f5;
   border-radius: 15px;
+}
+.photoUpload input[type="file"]:hover {
+  color: red;
 }
 #img {
   height: 100%;
